2007-04-03  Srinivasa Ragavan  <sragavan@novell.com>

	* em-migrate.c: (emm_setup_initial): Fix for evolution on crashing
	while setting up the first account.

2007-04-03  Matthew Barnes  <mbarnes@redhat.com>

	* em-event.h: Don't #include <composer/e-msg-composer.h> since we
	don't install that file.  Doing so prevents third-party applications
	like mail-notification from building. (#400241)

2007-04-03  Srinivasa Ragavan  <sragavan@novell.com>

	Reworked the SPAM plugins with more UI options and support for
	multiple plugins.

	* em-folder-view.c:
	* em-junk-hook.c: (emjh_construct_item), (emjh_construct):
	* em-junk-hook.h:
	* em-mailer-prefs.c: (junk_days_activate), (emmp_empty_junk_init),
	(junk_plugin_changed), (junk_plugin_setup),
	(create_combo_text_widget), (em_mailer_prefs_construct):
	* em-mailer-prefs.h:
	* evolution-mail.schemas.in.in:
	* mail-component.c: (impl_createView), (mc_quit_delete),
	(impl_quit):
	* mail-config.glade:
	* mail-session.c: (init), (mail_session_add_junk_plugin),
	(mail_session_get_junk_plugins):
	* mail-session.h:

2007-04-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #411331

	* em-folder-browser.c: (emfb_gui_folder_changed): Fix the message
	selection.

2007-04-03  Matthew Barnes  <mbarnes@redhat.com>

	* evolution-mail.schemas.in.in:
	Correctly capitalize SpamAssassin.  (#375577)
	Patch from Priit Laes.

2007-04-03  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-browser.c:
	* em-folder-view.c:
	* message-list.c:
	Load "emblem-important" instead of deprecated
	"stock_mail-priority-high" icon.  (#387619)
	Patch from Rodney Dawes.

2007-04-01  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #373117

	* em-composer-prefs.c:
	* em-composer-prefs.h:
	* em-mailer-prefs.c:
	* em-mailer-prefs.h:
	* mail-config.glade:
	Migrate from GnomeColorPicker to GtkColorButton.

2007-03-30  Matthew Barnes  <mbarnes@redhat.com>

	* em-format-html-display.c (icon_entry_changed_cb): Fix a typo.
